| Summary: | ASTERISK-29749: res_xmpp: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-16 06:50:42.000-0600 | Date Closed: | 2021-11-18 12:49:54.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Documentation Resources/res_xmpp |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} res/res_xmpp.c:1933: warning: argument 'channel' of command @param is not found in the argument list of acf_jabberreceive_read(struct ast_channel *chan, const char *name, char *data, char *buf, size_t buflen) res/res_xmpp.c:1941: warning: The following parameters of acf_jabberreceive_read(struct ast_channel *chan, const char *name, char *data, char *buf, size_t buflen) are not documented: parameter 'chan' parameter 'name' parameter 'buf' parameter 'buflen' res/res_xmpp.c:1667: warning: argument 'channel' of command @param is not found in the argument list of acf_jabberstatus_read(struct ast_channel *chan, const char *name, char *data, char *buf, size_t buflen) res/res_xmpp.c:1675: warning: The following parameters of acf_jabberstatus_read(struct ast_channel *chan, const char *name, char *data, char *buf, size_t buflen) are not documented: parameter 'chan' parameter 'name' parameter 'buf' parameter 'buflen' res/res_xmpp.c:1593: warning: documented empty return type of xmpp_init_event_distribution res/res_xmpp.c:1076: warning: The following parameter of xmpp_pubsub_build_publish_skeleton(struct ast_xmpp_client *client, const char *node, const char *event_type, unsigned int cachable) is not documented: parameter 'cachable' res/res_xmpp.c:1161: warning: documented empty return type of xmpp_pubsub_create_affiliations res/res_xmpp.c:1247: warning: documented empty return type of xmpp_pubsub_create_collection res/res_xmpp.c:1260: warning: documented empty return type of xmpp_pubsub_create_leaf res/res_xmpp.c:1199: warning: documented empty return type of xmpp_pubsub_create_node res/res_xmpp.c:1364: warning: argument 'ast_event' of command @param is not found in the argument list of xmpp_pubsub_devstate_cb(void *data, struct stasis_subscription *sub, struct stasis_message *msg) res/res_xmpp.c:1369: warning: The following parameters of xmpp_pubsub_devstate_cb(void *data, struct stasis_subscription *sub, struct stasis_message *msg) are not documented: parameter 'sub' parameter 'msg' res/res_xmpp.c:1369: warning: documented empty return type of xmpp_pubsub_devstate_cb res/res_xmpp.c:1336: warning: argument 'ast_event' of command @param is not found in the argument list of xmpp_pubsub_mwi_cb(void *data, struct stasis_subscription *sub, struct stasis_message *msg) res/res_xmpp.c:1341: warning: The following parameters of xmpp_pubsub_mwi_cb(void *data, struct stasis_subscription *sub, struct stasis_message *msg) are not documented: parameter 'sub' parameter 'msg' res/res_xmpp.c:1341: warning: documented empty return type of xmpp_pubsub_mwi_cb res/res_xmpp.c:1305: warning: The following parameter of xmpp_pubsub_publish_device_state(struct ast_xmpp_client *client, const char *device, const char *device_state, unsigned int cachable) is not documented: parameter 'cachable' res/res_xmpp.c:1305: warning: documented empty return type of xmpp_pubsub_publish_device_state res/res_xmpp.c:1274: warning: documented empty return type of xmpp_pubsub_publish_mwi res/res_xmpp.c:4034: warning: documented empty return type of xmpp_pubsub_request_nodes res/res_xmpp.c:1419: warning: documented empty return type of xmpp_pubsub_subscribe res/res_xmpp.c:1393: warning: documented empty return type of xmpp_pubsub_unsubscribe res/res_xmpp.c:40: warning: included file jabber.conf.sample is not found. Check your EXAMPLE_PATH {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-16 06:50:43.254-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 12:49:54.923-0600 Change 17487 merged by Friendly Automation: res_xmpp: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17487|https://gerrit.asterisk.org/c/asterisk/+/17487] By: Friendly Automation (friendly-automation) 2021-11-18 13:01:02.006-0600 Change 17488 merged by Friendly Automation: res_xmpp: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17488|https://gerrit.asterisk.org/c/asterisk/+/17488] By: Friendly Automation (friendly-automation) 2021-11-18 14:44:15.058-0600 Change 17489 merged by Kevin Harwell: res_xmpp: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17489|https://gerrit.asterisk.org/c/asterisk/+/17489] By: Friendly Automation (friendly-automation) 2021-11-18 14:44:29.453-0600 Change 17476 merged by Kevin Harwell: res_xmpp: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17476|https://gerrit.asterisk.org/c/asterisk/+/17476] | ||