res_xmpp: Fix for Doxygen.

ASTERISK-29749

Change-Id: I7885793b63bdeaa883e76edb899bbba9660eb1c5